# Project_2

./: .gitignore  README.md
documents/: Firebase.docx  README.md  nRF52-instructions.docx
firebase/firebase doc/: doc.md
firebase/nRF52/: .clang-format  CMakeLists.txt  Kconfig  README.md  nrf52840dk_nrf52840.overlay  prj.conf
firebase/nRF52/src/: adc.c  adc.h  config.c  main.c  mqtt.c  mqtt.h  util.h
firebase/nRF52/src/sensors/: gy61.c  gy61.h  t67xx.c  t67xx.h  t67xx_i2c.c  t67xx_i2c.h
firebase/python/: .gitignore  requirements.txt
firebase/python/src/: firebase.py  main.py  mqtt.py
firebase/python/src/config/: mqtt.py  mqtt_config.py
mqtt_base/: CMakeLists.txt  README.md
mqtt_base/src/: main.c  mqtt.c
mqtt_send_petteri/mqtt_nrf_add_dns/: prj.conf
mqtt_send_petteri/mqtt_nrf_cloud/: .clang-format  .gitignore  CMakeLists.txt  README.md  prj.conf
mqtt_send_petteri/mqtt_nrf_cloud/Sertifikaatti_csv_demo/: nrfcloud_provision_demo.csv  nrfcloud_provision_sertificate_demo.csv
mqtt_send_petteri/mqtt_nrf_cloud/src/: config.c  config.h  main.c  mqtt.c  mqtt.h
