# SPDX-License-Identifier: Apache-2.0

cmake_minimum_required(VERSION 3.20.0)

find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
project(firebase)

target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/config.c)
target_sources(app PRIVATE src/mqtt.c)
target_sources(app PRIVATE src/adc.c)
target_sources_ifndef(CONFIG_DISABLE_GY61 app PRIVATE src/sensors/gy61.c)
target_sources(app PRIVATE src/sensors/t67xx.c)
